# Spider_robot

./: README.md
Spider_FINISHED/: Spider_base_finished.FCStd  Spider_cupula_finished.FCStd  Spider_servos_finished.FCStd
Spider_FINISHED/Adapts/: Copler.stl  Spider_base.stl  Spider_base_adapt.stl  Spider_base_cover_down.stl  Spider_camera_module_adapt.stl  Spider_camera_second_adapt.stl  Spider_cover_base_down_battery.stl  Spider_cupula_in_rasp_adapt.stl  Spider_dome_in_down_.stl  Spider_dome_in_down_resize.stl  Spider_dome_in_up_.stl  coupler-Copler_adapt.stl
keyboard_reader/: setup.cfg
spider/: CMakeLists.txt
spider/config/: sensors_bridge.yaml
spider/launch/: description.launch.py  display.launch.py
spider/meshes/: robotcad_simple_parts_sg_base_b572c8.dae  robotcad_simple_parts_sg_foot_front_left_sx0cyl.dae  robotcad_simple_parts_sg_foot_front_right_2f7ujs.dae  robotcad_simple_parts_sg_hip_back_left_5euasu.dae  robotcad_simple_parts_sg_hip_back_right_fdelkm.dae  robotcad_simple_parts_sg_hip_front_right_s1hwve.dae  robotcad_simple_parts_sg_leg_back_right_5utyh4.dae  robotcad_simple_parts_sg_leg_front_left_1neb7v.dae  robotcad_simple_parts_sg_leg_front_right_txxlih.dae  robotcad_simple_parts_spider_camera_module003_cewph9.dae  robotcad_simple_parts_spider_cupula_superior_camera003_ep25yw.dae  robotcad_simple_parts_spider_foot_frontleft_twfqzz.dae  (+1 more)
spider/urdf/: Robot.urdf  kdl.cpp
spider_control/: package.xml
spider_driver/: package.xml
ws_pi/src/spider_driver/: CMakeLists.txt
ws_pi/src/spider_driver/include/spider_driver/: ControllerNode.hpp
(+501 files in other folders)
